Add GetTask to TasksReader
