# pkg/server/setup.go
@@ -78,18 +78,20 @@ func Setup(cfg conf.ServerConfig) (Application, error) {
 }
 
 func registerServices(srv *grpc.Server, svc Services) {
-	tasksv1.RegisterTasksWriterServiceServer(srv, svc.Tasks)
+	tasksv1.RegisterTasksWriterServiceServer(srv, svc.TasksWriter)
 	healthv1.RegisterHealthServer(srv, svc.Health)
 }
 
 // setupServices initializes the Application Services.
 func setupServices(db *gorm.DB, logger *zap.Logger, tracerProvider trace.TracerProvider, meterProvider metric.MeterProvider) Services {
 	logger.Debug("Initializing services")
-	TasksWriterService := service.NewTasksWriter(db, logger, meterProvider.Meter("todo.huck.com.ar/tasks"))
+	tasksWriterService := service.NewTasksWriter(db, logger, meterProvider.Meter("todo.huck.com.ar/tasks.writer"))
+	tasksReaderService := service.NewTasksReader(db, logger, meterProvider.Meter("todo.huck.com.ar/tasks.reader"))
 	healthService := health.NewServer()
 	return Services{
-		Tasks:  TasksWriterService,
-		Health: healthService,
+		TasksWriter: tasksWriterService,
+		TasksReader: tasksReaderService,
+		Health:      healthService,
 	}
 }
 
